Add Camera Page and integrate camera functionality with UI updates

--- a/src/Platforms/iOS/Info.plist
+++ b/src/Platforms/iOS/Info.plist
@@ -28,5 +28,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app uses the camera to demonstrate SafeArea APIs with camera functionality.</string>
 </dict>
 </plist>
